Archive2/82/ae9ef8192e57f3/output
main.cpp: In function 'int main()':
main.cpp:27:30: error: conversion from 'boost::multi_index::index<boost::multi_index::multi_index_container<employee, boost::multi_index::indexed_by<boost::multi_index::ordered_unique<boost::multi_index::tag<id>, boost::multi_index::member<employee, int, &employee::id> >, boost::multi_index::ordered_non_unique<boost::multi_index::tag<name>, boost::multi_index::member<employee, std::basic_string<char>, &employee::name> >, boost::multi_index::ordered_non_unique<boost::multi_index::tag<age>, boost::multi_index::member<employee, int, &employee::age> > > >, age>::type {aka boost::multi_index::detail::ordered_index<boost::multi_index::member<employee, int, &employee::age>, std::less<int>, boost::multi_index::detail::nth_layer<3, employee, boost::multi_index::indexed_by<boost::multi_index::ordered_unique<boost::multi_index::tag<id>, boost::multi_index::member<employee, int, &employee::id> >, boost::multi_index::ordered_non_unique<boost::multi_index::tag<name>, boost::multi_index::member<employee, std::basic_string<char>, &employee::name> >, boost::multi_index::ordered_non_unique<boost::multi_index::tag<age>, boost::multi_index::member<employee, int, &employee::age> > >, std::allocator<employee> >, boost::mpl::v_item<age, boost::mpl::vector0<mpl_::na>, 0>, boost::multi_index::detail::ordered_non_unique_tag>}' to non-scalar type 'main()::<anonymous struct>' requested
     struct {} _ = get<age>(es);
                              ^
